<?xml version="1.0"?>
<package format="3">
  <name>gps_communication</name>
  <version>0.1.0</version>
  <description>ROS2 package for GPS communication</description>
  <maintainer email="aurunima94@gmail.com">Aurchie</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>  <!-- Add other dependencies here -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>  <!-- Add other dependencies here -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
